--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container">
-    <a class="navbar-brand" href="/">Rails都做了第四遍了</a>
-  </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Rails 104</a>
+    </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -10,6 +11,7 @@
         </li>
       </ul>
     </div>
+  </div>
 
 
 </nav>
