--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,13 @@
   </head>
 
   <body>
-    <%= render "common/flashes" %>
-    <%= yield %>
+
+    <div class="container-fluid">
+      <%= render "common/navbar" %>
+      <%= yield %>
+    </div>
+
+    <%= render "common/footer" %>
+
   </body>
 </html>
