--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -3,12 +3,19 @@
 
     <hr>
     <%= form_for @group do |f| %>
+
+    Title
+    <br>
+    <%= f.text_field :title %>
+    <br>
     <br>
     Description
+    <br>
+
     <%= f.text_area :description %>
     <br>
 
     <%= f.submit "Submit", :disable_with => 'Submiting...' %>
     <% end %>
-    
+
 </div>
