--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,7 +2,7 @@
   <div class="group">
 
     <%= link_to("Write a Post", new_group_post_path(@group), class: "btn btn-default pull-right")%>
-    
+
     <% if current_user == @group.user && current_user %>
     <%= link_to("Edit", edit_group_path(@group), class: "btn btn-primary pull-right")%>
     <% end %>
@@ -10,4 +10,22 @@
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
 
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Post Content</th>
+        <th>Publisher</th>
+        <th>Create time</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><%= post.content %></td>
+          <td><%= post.user.email %></td>
+          <td><%= post.created_at %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
